# Bench2Drive

./: README.md  pyproject.toml
bench2drive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
leaderboard/leaderboard/: leaderboard_evaluator.py
leaderboard/leaderboard/data/: __init__.py
leaderboard/leaderboard/scenarios/: route_scenario.py
leaderboard/scripts/: run_evaluation_debug.sh  run_evaluation_multi_admlp.sh  run_evaluation_multi_tcp.sh  run_evaluation_multi_uniad.sh  run_evaluation_multi_uniad_tiny.sh  run_evaluation_multi_vad.sh
scenario_runner/srunner/scenariomanager/: carla_data_provider.py
scenario_runner/srunner/tools/: openscenario_parser.py
tools/: ability_benchmark.py  utils.py
